--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=employee
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
-spring.datasource.password=oops@#1905
+spring.datasource.password=YOUR_PASSWORD
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
