--- a/employee/src/main/resources/application.properties
+++ b/employee/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=employee
 
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
-spring.datasource.username=root
-spring.datasource.password=oops@#1905
+spring.datasource.username=yourusername
+spring.datasource.password=yourpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
